2004-02-17 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: fix TDiary::Filter::Filter#comment_filter prototype.

2004.02.12 Junichiro Kita <kita@kitaj.no-ip.com>
	* tdiary/filter/default.rb: support ruby 1.6.x.

2004-02-11 zunda <zunda at freeshell.org>
	* tdiary.rb, tdiary/filter/default.rb: fix bugs.

2004-02-10 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb, tdiary/filter/default.rb: TSUKKOMI and referer filter feature.

2004-02-09 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb: fuzzy regexp in my plugin.
	* skel/mail.rtxt*: anchor move to the bottom of body.

2004-02-09 mput <mput@users.sf.net>
	* tdiary.rb: fix Plugin#apply_plugin.

2004-02-04 UECHI Yasumasa <uh@u.dhis.portside.net>
	* misc/style/rd/rd_style.rb: rescue ParseError

2004-01-26 UECHI Yasumasa <uh@u.dhis.portside.net>
	* misc/style/rd/rd_style.rb: fix body_to_html

2004.01.21 Junichiro Kita <kita@kitaj.no-ip.com>
	* tdiary.rb: call update_proc in TDiaryTrackBackReceive#eval_rhtml for recent_trackback3.rb.

2004-01-17 TADA Tadashi <sho@spc.gr.jp>
	* plugin/{ja,en}/00default.rb: split @theme_location_comment.
	* theme/base.css: modify style of calendar3 plugin.

2004-01-17 TADA Tadashi <sho@spc.gr.jp>
	* misc/posttdiary.rb: support ruby 1.8.1.

2004-01-17 Kazuhiko <kazuhiko@fdiary.net>
	* tdiary.rb: use erbscan if possible.

2004.01.12 Junichiro Kita <kita@kitaj.no-ip.com>
	* tdiary.rb: remove TDiaryTrackBackBase#trackback_url.
	* tdiary.rb: use @conf.base_url in TDiaryTrackBackBase#diary_url.

2004.01.12 Junichiro Kita <kita@kitaj.no-ip.com>
	* tdiary.rb: if trackback is longer than 255 byte, it will be shorten to 252 byte and '...' will be added.

2004.01.09 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb: meta link support HTML 4.01.

2003.12.30 Junichiro Kita <kita@kitaj.no-ip.com>
	* plugin/00default.rb: my can handle 'yyyymmdd#txx'.
	* wiki_style.rb: strip_subtitle returns nil if sibtitle == ''. thanks to YAA.

2003.12.26 TADA Tadashi <sho@spc.gr.jp>