@@ -1,5 +1,4 @@
-<%# i.day.rhtml $Revision: 1.14 $ %>
-<%%update_proc if @mode == 'comment'%>
+<%# i.day.rhtml $Revision: 1.15 $ %>
 <H1><%= CGI::escapeHTML( @conf.html_title ) %></H1>
 <P>
 <%%= mobile_navi %>
