@@ -1,5 +1,4 @@
-<%# i.show.rhtml $Revision: 1.9 $ %>
-<%%update_proc%>
+<%# i.show.rhtml $Revision: 1.10 $ %>
 <H1><%= CGI::escapeHTML( @conf.html_title ) %> <%%=label_update_complete%></H1>
 <P>
 <%%= mobile_navi %>
