@@ -1,5 +1,5 @@
-<%# show.rhtml $Revision: 1.10 $ %>
-<%%=navi%><%%update_proc%>
+<%# show.rhtml $Revision: 1.11 $ %>
+<%%=navi%>
 
 <h1><%= CGI::escapeHTML( @conf.html_title ) %> <%%=label_update_complete%></h1>
 <% unless @diary.visible? then %><p class="message"><%%=label_hidden_diary%></p><% end %>
